--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -31,3 +31,9 @@ $susy: (
 //@import "sidebar/_index";
 //@import "footer/_index";
 //@import "wordpress/_index";
+
+
+.text-custom {
+    font-size: $text-custom;
+    //font-size: 25px;
+}
