--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,3 +1,4 @@
+//@import "../../theme.json";
 //
 // Variables
 // --------------------------------------------------
@@ -18,3 +19,6 @@ $gallery-caption-color: #999;
 
 $navbar-height: 80px;
 $navbar-margin-bottom: 0;
+
+
+$text-custom: var(--wp--preset--font-size);
