--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -27,7 +27,7 @@ $susy: (
 //@import "header/_index";
 //@import "navigations/_index";
 @import "content/_index";
-//@import "comments/_index";
+@import "comments/_index";
 //@import "sidebar/_index";
 //@import "footer/_index";
 //@import "wordpress/_index";
