--- a/assets/sass/comments/_comments-area.scss
+++ b/assets/sass/comments/_comments-area.scss
@@ -1,23 +1,38 @@
 /**
+ * @fix
+ * This is only for transitioning of the comments to the FSE
+ Remember to remove this when FSE is fully integrated
+ Testing:
+ Go to http://italystrap.test/template-comments/
+ And see if the comments are right positioned without avatar to overlap
+ left border respect of the content.
+ */
+.wp-block-post-comments {
+    max-width: calc( 700px - 3.25em );
+    margin-left: auto !important;
+    margin-right: auto !important;
+}
+
+/**
  * Some basic style
  */
-.comments-area{
-	ul,
-    ol {
-      &.parent {
-        @extend .list-unstyled;
-      }
-      &.children {
-        @extend .list-unstyled;
-      }
-      .comment {
-        margin-top: calc(2 * #{$spacer});
-      }
-    }
- }
-
- @for $i from 2 through 9 {
-   .depth-#{$i} {
-     margin-left: #{$i*2}rem;
-   }
- }
+//.comments-area{
+//	ul,
+//    ol {
+//      &.parent {
+//        @extend .list-unstyled;
+//      }
+//      &.children {
+//        @extend .list-unstyled;
+//      }
+//      .comment {
+//        margin-top: calc(2 * #{$spacer});
+//      }
+//    }
+// }
+//
+// @for $i from 2 through 9 {
+//   .depth-#{$i} {
+//     margin-left: #{$i*2}rem;
+//   }
+// }
