--- a/assets/sass/global/_fix.scss
+++ b/assets/sass/global/_fix.scss
@@ -1,24 +1,16 @@
-.widget ul{
-  list-style: none outside none;
-  padding-left: 0;
-}
-//.comment-edit-link, .comment-reply-link, .btn-primary a{
-//  color: #FFFFFF !important;
-//}
-
 // Fix Title overflow content area
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, a, p, li {
 	-ms-word-wrap: break-word;
 	word-wrap: break-word;	
 }
 
-.size-full,
-.wp-post-image,
-.wp-block-image // <- Gutenberg
-{
-	//@include img-responsive();
-	@include img-fluid();
-	> img {
-		@include img-fluid();
-	}
-}
+//.size-full,
+//.wp-post-image,
+//.wp-block-image // <- Gutenberg
+//{
+//	//@include img-responsive();
+//	@include img-fluid();
+//	> img {
+//		@include img-fluid();
+//	}
+//}
