--- a/assets/sass/content/_gallery.scss
+++ b/assets/sass/content/_gallery.scss
@@ -20,7 +20,7 @@
         padding: 0.5em;
     }
     .gallery-caption {
-        color: $gallery-caption-color;
+        color: var(--wp--preset--color--black);
         font-size: 0.85em;
     }
     .gallery-icon,
