--- a/assets/sass/global/_typografy.scss
+++ b/assets/sass/global/_typografy.scss
@@ -1,28 +1,3 @@
-// .fonts-loaded {
-// 	body {
-// 		font-family: "Open Sans";
-// 	}
-// 	h1,h2,h3,h4,h5,h6{
-// 		font-weight: 300;
-// 	}
-	// h1 strong,h2 strong,h3 strong,h4 strong,h5 strong,h6 strong, .woocommerce div.product .product_title, .woocommerce .entry-content h1 a, .woocommerce-tabs h1, .related h3 {
-	// 	font-family: "Anton", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	// }
-// }
-// .navbar {
-//     letter-spacing: 0.075em;
-// 	font-size: 0.8em;
-// 	font-weight: 600;
-// 	text-transform: uppercase;
-// }
-
-//p {
-//    &:not(:last-child) {
-//        margin-bottom: 0;
-//        padding-bottom: 0;
-//    }
+//p + p {
+//    margin-top: 1.5rem;
 //}
-
-p + p {
-    margin-top: 1.5rem;
-}
